--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "@actions/core": "^1.6.0",
     "@actions/github": "^5.0.0",
     "@actions/io": "^1.1.1",
+    "@octokit/plugin-retry": "^3.0.9",
+    "@octokit/plugin-throttling": "^3.5.2",
+    "@octokit/rest": "^18.12.0",
     "fs": "^0.0.1-security",
     "json2csv": "^5.0.6",
     "path": "^0.12.7"
