--- a/action.yml
+++ b/action.yml
@@ -20,6 +20,11 @@ inputs:
   since:
     description: A date time in format YYYY-MM-DDTHH:mm:ss. If specified activity_days will be ignored.
     required: false
+
+  activity_days:
+    description: The number of days in the past to check for activity, this will be ignored if 'since' parameter is used.
+    required: true
+    default: 30
   
 runs:
   using: node12
