--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,10 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      activity_days:
+        description: The number of days to use to analyze activity
+        default: '30'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -28,3 +32,4 @@ jobs:
         uses: ./
         with:
           token: ${{ secrets.OCTODEMO_TEMP_TOKEN }}
+          activity_days: ${{ github.event.inputs.activity_days }}
