--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,18 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
-      activity_days:
-        description: The number of days to use to analyze activity
-        default: '30'
+      runmethod:
+        description: Method to run action in adhoc mode or scheduler
+        required: true
+        default: adhoc
+      
+      fromdate:
+        description: A date time in format YYYY-MM-DD. If specified activity_days will be ignored
+        required: true
+      
+      todate:
+        description: A date time in format YYYY-MM-DD. If specified activity_days will be ignored
+        required: true
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -33,3 +42,4 @@ jobs:
         with:
           token: ${{ secrets.OCTODEMO_TEMP_TOKEN }}
           activity_days: ${{ github.event.inputs.activity_days }}
+          
