--- a/action.yml
+++ b/action.yml
@@ -7,24 +7,29 @@ inputs:
     description:
     required:
 
+  runmethod:
+    description: Method to run action in adhoc mode or scheduler
+    required: true
+    default: adhoc
+
+  fromdate:
+    description: A date time in format YYYY-MM-DD. If specified activity_days will be ignored
+    required: true
+
+  todate:
+    description: A date time in format YYYY-MM-DD. If specified activity_days will be ignored
+    required: true
+
   outputDir:
-      description: output directory
-      required: true
-      default: ${{ github.workspace }}
+    description: output directory
+    required: true
+    default: ${{ github.workspace }}
   
   octokit_max_retries:
     description: maximum number if retries 
     required: true
     default: 15
   
-  since:
-    description: A date time in format YYYY-MM-DDTHH:mm:ss. If specified activity_days will be ignored.
-    required: false
-
-  activity_days:
-    description: The number of days in the past to check for activity, this will be ignored if 'since' parameter is used.
-    required: true
-    default: 30
   
 runs:
   using: node12
